Closed
Bug 1562868
Opened 6 years ago
Closed 5 years ago
Crash in [@ mozilla::ipc::ProcessLink::SendMessage | IPC_Message_Name=PCookieService::Msg_SetCookieString]
Categories
(Core :: Networking: Cookies, defect, P3)
Core
Networking: Cookies
Tracking
()
RESOLVED
FIXED
mozilla77
People
(Reporter: gsvelto, Assigned: baku)
References
Details
(Keywords: crash, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file, 2 obsolete files)
Bug 1562868 - Limit the amount of data shared between processes when document.cookie is set, r?smaug
47 bytes,
text/x-phabricator-request
|
Details | Review |
This bug is for crash report bp-aa6306f9-7763-473d-b254-b4ec90190630.
Top 10 frames of crashing thread:
0 xul.dll mozilla::ipc::ProcessLink::SendMessage ipc/glue/MessageLink.cpp:152
1 xul.dll mozilla::ipc::MessageChannel::Send ipc/glue/MessageChannel.cpp:995
2 xul.dll mozilla::net::PCookieServiceChild::SendSetCookieString ipc/ipdl/PCookieServiceChild.cpp:104
3 xul.dll nsresult mozilla::net::CookieServiceChild::SetCookieStringInternal netwerk/cookie/CookieServiceChild.cpp:553
4 xul.dll nsresult mozilla::net::CookieServiceChild::SetCookieString netwerk/cookie/CookieServiceChild.cpp:664
5 xul.dll mozilla::dom::Document::SetCookie dom/base/Document.cpp:5539
6 xul.dll static bool mozilla::dom::Document_Binding::set_cookie dom/bindings/DocumentBinding.cpp:2420
7 xul.dll mozilla::dom::binding_detail::GenericSetter<mozilla::dom::binding_detail::NormalThisPolicy> dom/bindings/BindingUtils.cpp:3124
8 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:540
9 xul.dll js::CallSetter js/src/vm/Interpreter.cpp:749
The raw crash reason is:
MOZ_CRASH(IPC message size is too large) - This is super sensitive data! Be careful how you use it!
This doesn't seem like a new bug, it just happens I spotted it while triaging nightly.
Updated•6 years ago
|
Component: IPC → Networking: Cookies
Comment 1•6 years ago
|
||
Honza, can you take a look?
Comment 2•6 years ago
|
||
Not sure if we can send cookie string in chunks, like this.
Set it to P3 for now, since the crash rate is low.
Priority: -- → P3
Whiteboard: [necko-triaged]
Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → amarchesini
Status: NEW → ASSIGNED
Assignee | ||
Comment 4•5 years ago
|
||
Depends on D67355
Updated•5 years ago
|
Attachment #9134183 -
Attachment is obsolete: true
Updated•5 years ago
|
Attachment #9134182 -
Attachment is obsolete: true
Assignee | ||
Comment 6•5 years ago
|
||
Depends on D67777
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c8bfef0a3dd3
Limit the amount of data shared between processes when document.cookie is set, r=smaug
Comment 8•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Updated•5 years ago
|
status-firefox74:
--- → wontfix
status-firefox75:
--- → wontfix
status-firefox76:
--- → wontfix
status-firefox-esr68:
--- → wontfix
You need to log in
before you can comment on or make changes to this bug.
Description
•