Bug 1562868 - Limit the amount of data shared between processes when document.cookie is set, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D68179

--HG--
extra : moz-landing-system : lando